ingress/llama3-1-8b-instruct/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama3-1-8b-instruct-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: llama3-1-8b-instruct.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meta-llama3-1-8b-instruct
                port:
                  number: 8000
